--- a/src/WpfControlsLib/WpfControlsLib.csproj
+++ b/src/WpfControlsLib/WpfControlsLib.csproj
@@ -94,6 +94,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constraints\ConstraintItem.cs" />
     <Compile Include="Controller\Controller.cs" />
     <Compile Include="Controls\Console\AppConsole.xaml.cs">
       <DependentUpon>AppConsole.xaml</DependentUpon>
@@ -127,7 +128,6 @@
     <Compile Include="Model\Graph.cs" />
     <Compile Include="Model\Model.cs" />
     <Compile Include="Constraints\Constraints.cs" />
-    <Compile Include="Constraints\ConstraintsItem.cs" />
     <Compile Include="Constraints\ConstraintsValues.cs" />
     <Compile Include="Constraints\ConstraintsWindow.xaml.cs" />
     <Compile Include="Controls\Console\AppConsoleViewModel.cs" />
