--- a/src/EditorPluginInterfaces/EditorPluginInterfaces.csproj
+++ b/src/EditorPluginInterfaces/EditorPluginInterfaces.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConstraintsEventArgs.cs" />
     <Compile Include="EdgeEventArgs.cs" />
     <Compile Include="IConsole.cs" />
     <Compile Include="IModel.cs" />
