--- a/src/WpfControlsLib/WpfControlsLib.csproj
+++ b/src/WpfControlsLib/WpfControlsLib.csproj
@@ -128,9 +128,9 @@
     <Compile Include="Model\Graph.cs" />
     <Compile Include="Model\Model.cs" />
     <Compile Include="Constraints\Constraints.cs" />
-    <Compile Include="Constraints\ConstraintsValues.cs" />
     <Compile Include="Constraints\ConstraintsWindow.xaml.cs" />
     <Compile Include="Controls\Console\AppConsoleViewModel.cs" />
+    <Compile Include="ViewModel\AttributeEventArgs.cs" />
     <Compile Include="ViewModel\AttributeViewModel.cs" />
     <Compile Include="Controls\Scene\EdgeBlueprint.cs" />
     <Compile Include="Controls\Scene\EditorObjectManager.cs" />
@@ -204,6 +204,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="stylecop.json" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
