--- a/src/WpfControlsLib/WpfControlsLib.csproj
+++ b/src/WpfControlsLib/WpfControlsLib.csproj
@@ -123,6 +123,7 @@
     </Compile>
     <Compile Include="Controls\Toolbar\Button.cs" />
     <Compile Include="Controls\Toolbar\Command.cs" />
+    <Compile Include="Controls\Toolbar\CommandXAMLAdapter.cs" />
     <Compile Include="Controls\Toolbar\StandardButtonsAndMenus\SampleButtonsCollection.cs" />
     <Compile Include="Controls\Toolbar\ToolbarView.xaml.cs">
       <DependentUpon>ToolbarView.xaml</DependentUpon>
