Added missing methods, fixed bug with "hanging" edges, removed some dependencies between scene class and graph class

--- a/src/EditorPluginInterfaces/EditorPluginInterfaces.csproj
+++ b/src/EditorPluginInterfaces/EditorPluginInterfaces.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EdgeEventArgs.cs" />
+    <Compile Include="ElementEventArgs.cs" />
     <Compile Include="IConsole.cs" />
     <Compile Include="IModel.cs" />
     <Compile Include="IPlugin.cs" />
