-undo stack returned

--- a/src/WpfControlsLib/WpfControlsLib.csproj
+++ b/src/WpfControlsLib/WpfControlsLib.csproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\Controller.cs" />
+    <Compile Include="Controller\SceneActionsRegister.cs" />
     <Compile Include="Controls\Console\AppConsole.xaml.cs">
       <DependentUpon>AppConsole.xaml</DependentUpon>
     </Compile>
